# EHC-LABS

./: CMakeLists.txt
1_mmult/: CMakeLists.txt
2_aos_soa/: CMakeLists.txt
3_primary_nums/: CMakeLists.txt
LABS/SR1/: CMakeLists.txt
lab/lab1/: CMakeLists.txt  main.cpp
